updated admin to implement paging and role